<resources>
    <string name="app_name">SmackChat</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="profile_image">Profile Image</string>
    <string name="user_name">user name</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="tap_to_generate_user_avatar">Tap to generate user avatar</string>
    <string name="generate_background_color">Generate Background Color</string>
    <string name="create_user">Create User</string>
</resources>
